# DocWeave

./: .cursorrules  .gitignore  COPILOT_SETUP.md  INSTALLATION.md  QUICK_START.md  README.md  development_guide.md  install.sh  pyproject.toml
DocweaveDocs/: CHANGES.md  DIAGRAMS.md  INTEGRATION.md  NARRATIVE.md  NEXT_STEPS.md
src/docweave/: __init__.py  app.py  cli.py
src/docweave/components/: __init__.py  copilot_integration.py  doc_generator.py
src/docweave/features/: __init__.py  commit_analysis.py
src/docweave/hooks/: __init__.py
src/docweave/types/: __init__.py  models.py
static/: app.js  index.html  styles.css
