[tool.poetry]
name = "docweave"
version = "0.1.0"
description = "CLI tool powered by GitHub Copilot CLI that analyzes git repositories and generates beautiful documentation"
authors = ["DocWeave"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gitpython = "^3.1"
click = "^8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
docweave = "docweave.cli:cli"
